@@ -29,7 +29,9 @@ if post_params:
 					new_client['post_ip'] = "dhcp"
 				elif post_params['post_ip']:
 					new_client['post_ip'] = post_params['post_ip']
-				new_client['start_install'] = False
+				new_client['status'] = "Not Installed"
+				if not post_params['mac'] in shared_info.client_state:
+					shared_info.client_state[new_client['mac']] = { 'ip': new_client['current_ip'], 'install_status': "waiting for server", 'start_install': False }
 				shared_info.clients.append(new_client)
 			except:
 				errormsg += "Error while adding the new profile!"
@@ -48,7 +50,10 @@ step to deploy all installations.
 Hostname: <input type="text" name="hostname"><br>
 MAC Address: <input type="text" name="mac" max_length="18"><br>
 Current IP: <input type="text" name="current_ip" max_length="15"> --- or <input type="checkbox" name="current_dhcp"> DHCP --- or <input type="checkbox" name="current_netup"> None (client is already up and connected to the net)<br>
-Profile to be used by this client: <input type="text" name="profile"><br><hr>
+Profile to be used by this client: <select name="profile">
+<: for profile in shared_info.profiles:
+<option value="<% profile['name'] %>"><% profile['name'] %></option>
+</select><br><hr>
 Post-install settings:
 Post-install network IP: <input type="text" name="post_ip" max_length="15"> 
 blah blah netmask gateway blah.
