@@ -20,7 +20,7 @@
       <a href="showclients.pyhtml">Manage</a><br>
       <a href="delete_client.pyhtml">Delete</a></p>
       <p>Install:<br>
-      <a href="mastergli.php?page=Configure">Configure</a><br>
+      <a href="configure.pyhtml">Configure</a><br>
       <a href="mastergli.php?page=Execute">Execute</a><br>
       <a href="mastergli.php?page=Status">Status</a></p>
       <p>Master Server:<br>
