@@ -2,12 +2,12 @@
 
 These are the GET params you passed:<br><br>
 <pre>
-<% str(self.get_params) %>
+<% str(get_params) %>
 </pre>
 <br><br>
 These are the POST params you passed:<br><br>
 <pre>
-<% str(self.post_params) %>
+<% str(post_params) %>
 </pre>
 
 <? include /main_bottom.pyhtml ?>
