@@ -1,9 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.576 2006/01/11 02:49:18 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.577 2006/01/12 14:29:03 codeman Exp $
 
 *GLI-0.3 (27 Oct 2005)
+
+  12 Jan 2006; Preston Cody <codeman@gentoo.org>
+  added configure.pyhtml to glimd. minor changes
+  to top and add_client.  fixed up showargs.
 
   10 Jan 2006; Preston Cody <codeman@gentoo.org>
   src/net/server/*:
